release: Oracle of Daedalus 0.8.0
